name:                mpd-status
version:             0.1.0.0

synopsis:            A nice-looking statusline for MPD.
description:         A interactive MPD status block for use with i3blocks.

license:             PublicDomain
author:              Peter Rice
maintainer:          peter@peterrice.xyz

category:            Sound
build-type:          Simple

cabal-version:       >=1.10

source-repository head
    type:       git
    location:   https://github.com/pvsr/mpd-status

executable mpd-status
  default-extensions:  OverloadedStrings
  other-extensions:    LambdaCase
  ghc-options:         -Wall
  main-is:             Status.hs
  other-modules:       Click
                       Config
                       Operation

  build-depends:       base >=4.11 && <5.0
                     , aeson >=1.4 && <1.5
                     , bytestring >=0.10 && <0.11
                     , containers >=0.5 && <0.7
                     , libmpd >=0.9 && <0.10
                     , text >=1.2 && <1.3
  default-language:    Haskell2010
