name:                mpd-status
version:             0.1.0.0

synopsis:            A nice-looking statusline for MPD.
description:         A interactive MPD status block for use with i3blocks.

license:             PublicDomain
author:              Peter Rice
maintainer:          peter@peterrice.xyz

category:            Sound
build-type:          Simple

cabal-version:       >=1.10

source-repository head
    type:       git
    location:   https://github.com/pvsr/mpd-status

executable mpd-status
  default-extensions:  OverloadedStrings
  other-extensions:    LambdaCase
  ghc-options:         -Wall
  main-is:             I3blocks/Main.hs
  other-modules:       I3blocks.Block
                       I3blocks.Click
                       I3blocks.Config
                       Operation
                       Shuffle

  build-depends:       base >=4.11 && <5.0
                     , array >=0.5.0.0 && <0.6.0.0
                     , aeson >=1.4 && <1.5
                     , bytestring >=0.10 && <0.11
                     , containers >=0.5 && <0.7
                     , libmpd >=0.9 && <0.10
                     , mtl >2.2.0 && <2.3.0
                     , random >=1.1 && <1.2
                     , text >=1.2 && <1.3
  default-language:    Haskell2010
